[package]
name = "find_biggest_file"
version = "0.1.0"
authors = ["Torben Clasen <t.clasen@outlook.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0.125", features = ["derive"]}
serde_json = "1.0.64"
structopt = "0.3.21"
thiserror = "1.0.24"
walkdir = "2.3.2"
